The position of the scrolled-navbar will change to fixed so it will stick to the top of the webpage trough the whole body of the document. The z-index changes to 2 so it will be always on top.

--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,6 @@ header:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: sticky;
     top: -1px;
     z-index: 1;
     gap: 50%;
@@ -115,6 +114,8 @@ header:hover {
 }
 
 .scrolled-navbar{
+    position: fixed;
+    z-index: 2;
     height: 7vh;
     padding: 3vh 0;
     background-color: rgb(0, 0, 0);
